Small fixes/improvements
* Fixed scheduler in admin UI using wrong websocket call.
* Fixed role permission layout bug in Firefox in Builder.
* Added minimum size to icon input in Builder.
* Added function to automatically use one or all record values from a collection based on a query filters operator. Some collections only contain a single row and it makes handling with them easier, if single value operators (=, <, >, etc.) work out of the box. Multi-value operators (ANY/ALL) will use all record values.
* Made form SET function in Builder more resilient against accidently forgetting form options.

--- a/www/comps/builder/builder.css
+++ b/www/comps/builder/builder.css
@@ -569,6 +569,7 @@
 }
 .build-icon-input-window {
 	max-width:500px;
+	min-width:300px;
 }
 .build-icon-input-window .module{
 	display:flex;
@@ -583,7 +584,7 @@
 	margin:0px;
 }
 .build-icon-input-window .actions{
-	margin-top:10px;
+	margin-top:20px;
 }
 
 /* role */
@@ -610,14 +611,13 @@
 .builder-roles .role-child{
 	margin:0px 0px 0px 0px;
 }
-.builder-role{
-	flex:1 1 auto;
-	display:flex;
-	flex-flow:column nowrap;
-}
+.builder-role{}
 .builder-role.contentBox .content{
 	display:flex;
 	flex-flow:row nowrap;
+}
+.builder-role table{
+	width:100%;
 }
 
 /* functions */
